--- a/html&css로 만드는 한 페이지 웹페이지/Gatt.html
+++ b/html&css로 만드는 한 페이지 웹페이지/Gatt.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML & CSS Basics summary</title>
   <link href="Gatt.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -12,15 +15,18 @@
     <img src="image/html-css.png" alt="Shapes representing html & css" /> 
 
   </header>
-    <div>
+    <div class="Big-Box">
       <h2>HTML Summary</h2>
+      <p>
+        HTML (Hyper Text Markup Language) is used to define our page content, structure and meaning. 
+        <br>You <strong>don't</strong> use it for styling purposes. Use CSS for that instead!
+      </p>
       <ul>
-        HTML(Hyper Text Markup Language) is used to define our page content, structure and meaning. you <strong>don't</strong> use it for styling purposes. Use CSS for that instead!
         <li>
           HTML uses "elements" to describe (annotate) content
-          <ol>
-            HTML elements typically have an opening tag, content and then a closing tag
-          </ol>
+        <ol>
+          HTML elements typically have an opening tag, content and then a closing tag
+        </ol>
         </li>
         <li>
           You can also have void (empty) elements like images
@@ -31,12 +37,38 @@
         <ol>
           There's a long list of available elements but you'll gain experience over time, no worries.
         </ol>
-        Learn more about all available HTML elements on <span>the MDN HTML element reference</span>
       </ul>
+      <p>
+        Learn more about all available HTML elements on <span>the MDN HTML element reference</span>
+      </p>
+      <h2>CSS Summary</h2>
+      <p>
+        css(cascading Style Sheets) is used for styling your page content.
+      </p>
+      <ul>
+        <ol>
+          styles are assigned via property-value pairs
+        </ol>
+        <ol>
+          you can assign styles via the "style" attribute
+        </ol>
+        <li>
+          To avoid code duplication, you typically use global styles(e.g. via the "style" element) instead
+        </li>
+        <ol>
+          Alternatively, you can work with external stylesheet files which you "link" to
+        </ol>
+        <li>
+          When working with CSS, concepts like "inheritance", "specificity" and the "box model" should be understood.
+        </li>
+      </ul>
+    <p>
+      Learn more about all available CSS properties and values on <span>the MDN CSS property reference</span>
+    </p>
     </div>
   <footer>
-    <p><a href="http://www.naver.com">download PDF Summary</a></p>
-    <p>(c) Academind GmbH</p>
+    <p><a href="http://www.naver.com" id="box-model">Download PDF Summary</a></p>
+    <p id="last-a">(c) Academind GmbH</p>
   </footer>
 </body>
 </html>
