--- a/html&css_onePage/html&css_basics_summary.html
+++ b/html&css_onePage/html&css_basics_summary.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML & CSS Basics summary</title>
-    <link href="styles/Gatt.css" rel="stylesheet" />
+    <link href="/html&css_onePage/css/index.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
